src/objects/Metadata_Audit_Run_Log__c.object
<CustomObject>
    <fields>
        <fullName>Items_added__c</fullName>
        <label>Items added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Items_deleted__c</fullName>
        <label>Items deleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Items_modified__c</fullName>
        <label>Items modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metadata_Audit_Job_Log__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Metadata Audit Job Log</label>
        <referenceTo>Metadata_Audit_Job_Log__c</referenceTo>
        <relationshipLabel>Metadata Audit Run Logs</relationshipLabel>
        <relationshipName>Metadata_Audit_Run_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metadata_category__c</fullName>
        <globalPicklist>Metadata_types</globalPicklist>
        <label>Metadata category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_query_items_returned__c</fullName>
        <label>Number of query items returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Metadata Audit Run Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Items_added__c</columns>
        <columns>Items_deleted__c</columns>
        <columns>Items_modified__c</columns>
        <columns>Metadata_category__c</columns>
        <columns>Number_of_query_items_returned__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MARL-{00000000}</displayFormat>
        <label>Metadata Audit Run Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Audit Run Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>